--- a/2024SW-HCI/style.css
+++ b/2024SW-HCI/style.css
@@ -36,39 +36,67 @@ body {
   z-index: 2;
   text-align: center;
   padding: 20px;
+  border-radius: 10px;
+  backdrop-filter: blur(5px);
+  max-width: 80%;
+  margin: 0 auto;
 }
 
 .nav-menu {
+  padding-top: 30px;
   display: flex;
+  gap: 100px;
+  flex:auto;
   justify-content: center;
-  gap: 30px;
-  margin-bottom: 20px;
+  font-family: 'Merriweather', serif;
+  
 }
 
 .nav-menu a {
-  color: white;
+  color: #fff;
   text-decoration: none;
   font-weight: bold;
+  font-size: 1.1em;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
 .nav-menu a:hover {
-  text-decoration: underline;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .logo-container h1 {
-  font-size: 3em;
+  font-size: 3.5em;
   margin: 0;
+  color: #fff;
+  font-family: 'Merriweather', serif;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
 
 .logo-container span {
   font-size: 1.5em;
-  font-weight: normal;
+  font-weight: 300;
+  color: #fff;
+  display: block;
+  margin-top: 5px;
 }
 
-.logo-container p {
-  font-size: 1.2em;
-  margin: 10px 0 30px;
+.logo-container .quote {
+  font-size: 1.4em;
+  font-style: italic;
+  color: #d1d1d1;
+  margin-top: 20px;
+  font-family: 'Georgia', serif;
 }
+
+.logo-container .author {
+  font-size: 1.2em;
+  color: #f0f0f0;
+  margin-top: 5px;
+}
+
 
 .search-bar {
   position: relative;
@@ -166,21 +194,70 @@ body {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
+/* Estilos del footer */
 footer {
-  background-color: #f9f9f9;
-  padding: 20px;
+  background-color: #333;
+  color: #fff;
+  padding: 10px 5px;
   text-align: center;
-  border-top: 1px solid #ddd;
 }
 
-footer blockquote {
-  font-style: italic;
-  color: #555;
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-footer cite {
-  display: block;
-  margin-top: 10px;
-  font-weight: bold;
-  color: #333;
+.footer-section {
+  width: 30%;
+}
+
+.footer-section.left ul,
+.footer-section.right ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section.left ul li,
+.footer-section.right ul li {
+  margin-bottom: 10px;
+}
+
+.footer-section.left ul li a,
+.footer-section.right ul li a {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.footer-section.left ul li a:hover,
+.footer-section.right ul li a:hover {
+  color: #f1c40f;
+}
+
+.footer-logo {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+
+.social-icons a {
+  color: white;
+  margin: 0 10px;
+  font-size: 1.5em;
+  transition: color 0.3s, transform 0.3s;
+}
+
+.social-icons a:hover {
+  color: #f1c40f;
+  transform: scale(1.2);
+}
+
+.footer-bottom {
+  background-color: #222;
+  padding: 10px 0;
+  margin-top: 20px;
+  color: #bbb;
+  font-size: 0.9em;
 }
