--- a/2024SW-HCI/styles2.css
+++ b/2024SW-HCI/styles2.css
@@ -1,118 +1,178 @@
-/* Estilos globales */
+/* Estilos generales */
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
+    background-color: #f0f4f8;
     color: #333;
+    line-height: 1.6;
+    background-image: url('assets/fondo.jpg'); /* Imagen de fondo con puntitos */
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
+/* Estilos del header */
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
-    background-color: #fff;
-    border-bottom: 1px solid #ddd;
+    padding: 40px 20px;
+    background: url('./assets/images2.jpg') no-repeat center center;
+    background-size: cover;
+    color: #fff;
+    flex-wrap: wrap;
+    width: 100%;
+    
+    box-sizing: border-box;
 }
 
-.logo h1 {
+
+header .logo h1 {
     font-family: 'Arial', sans-serif;
-    font-size: 2.5em;
+    font-size: 2em;
     margin: 0;
-    color: #333;
+    color: #fff;
+}
+
+.nav-menu {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+    margin-top: 10px;
 }
 
 .nav-menu a {
-    margin-left: 20px;
     text-decoration: none;
-    color: #333;
+    color: #fff;
     font-weight: bold;
+    padding: 5px 10px;
+    transition: background-color 0.3s;
 }
 
 .nav-menu a:hover {
-    color: #bd00f7;
-}
-/* Estilos de la sección principal (hero-section) */
-.hero-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 60px 0;
-    background-color: #f9f9f9;
-    position: relative;
+    background-color: rgba(50, 151, 235, 0.3);
 }
 
-.container {
+/* Estilos de la sección principal */
+.hero-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #fff;
+    text-align: center;
+    margin: 20px auto;
+    max-width: 90%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+}
+
+.hero-section h2 {
+    font-size: 2.5em;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.table-responsive {
+    width: 100%;
+    overflow-x: auto;
+    margin-top: 20px;
+}
+
+.info-table {
+    width: 100%;
+    max-width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+}
+
+.info-table th {
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align:center;
+    word-wrap: break-word;
+}
+
+ 
+.info-table td {
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align:center;
+    word-wrap: break-word;
+}
+
+.info-table th {
+    background-color: #24cca6;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.info-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+/* Estilos del footer */
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+  }
+  
+  .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
-}
-
-.text-content {
-    max-width: 50%;
-}
-
-.text-content h1 {
-    font-size: 2.5em;
-    font-weight: bold;
-    color: #333;
-    margin: 0;
-}
-
-.text-content h1 span {
-    color: #24cca6;
-}
-
-.text-content h2 {
-    font-size: 2em;
-    font-weight: bold;
-    color: #333;
-    margin: 10px 0 20px;
-}
-
-.text-content p {
-    font-size: 1em;
-    color: #666;
-}
-
-.image-content {
-    max-width: 45%;
-    text-align: right; /* Asegura que la imagen esté alineada a la derecha */
-}
-
-.image-content img {
-    max-width: 100%;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-
-footer {
-    background-color: #f9f9f9;
-    padding: 20px;
-    text-align: center;
-    border-top: 1px solid #ddd;
-    flex:auto;
-    justify-content: center;
-}
-
-footer blockquote {
-    font-style: italic;
-    color: #555;
-}
-
-footer cite {
-    display: block;
-    margin-top: 10px;
-    font-weight: bold;
-    color: #333;
-}
+  }
+  
+  .footer-section {
+    width: 30%;
+  }
+  
+  .footer-section.left ul,
+  .footer-section.right ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .footer-section.left ul li,
+  .footer-section.right ul li {
+    margin-bottom: 10px;
+  }
+  
+  .footer-section.left ul li a,
+  .footer-section.right ul li a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+  
+  .footer-section.left ul li a:hover,
+  .footer-section.right ul li a:hover {
+    color: #d80aeb;
+  }
+  
+  .footer-logo {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+  }
+  
+  .social-icons a {
+    color: white;
+    margin: 0 10px;
+    font-size: 1.5em;
+    transition: color 0.3s, transform 0.3s;
+  }
+  
+  .social-icons a:hover {
+    color: #f1c40f;
+    transform: scale(1.2);
+  }
+  
+  .footer-bottom {
+    background-color: #222;
+    padding: 10px 0;
+    margin-top: 20px;
+    color: #bbb;
+    font-size: 0.9em;
+  }
